W-36-k8s-manifests/manifest2.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
          - containerPort: 80
---
kind: Service 
apiVersion: v1
metadata:
  name: frontend-service
spec:
  selector:
    app: apache
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
  type: ClusterIP
